WIP: leader_req(), not sure this is a good idea.
NON-FUNCTIONAL, WILL NOT BUILD, HALFWAY THRU, NOT CONVINCED

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(
     rdkafka_txnmgr.c
     rdkafka_cert.c
     rdkafka_coord.c
+    rdkafka_leader.c
     rdkafka_mock.c
     rdkafka_mock_handlers.c
     rdkafka_mock_cgrp.c
