--- a/win32/librdkafka.vcxproj
+++ b/win32/librdkafka.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="..\src\rdkafka_idempotence.c" />
     <ClCompile Include="..\src\rdkafka_txnmgr.c" />
     <ClCompile Include="..\src\rdkafka_coord.c" />
+    <ClCompile Include="..\src\rdkafka_leader.c" />
     <ClCompile Include="..\src\rdkafka_zstd.c" />
     <ClCompile Include="..\src\rdkafka_mock.c" />
     <ClCompile Include="..\src\rdkafka_mock_handlers.c" />
