Call rd_kafka_destroy() in C++ KafkaConsumer destructor rather than in close()
Prevents memory leak if close() is not called.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -105,6 +105,7 @@ set(
     0111-delay_create_topics.cpp
     0112-assign_unknown_part.c
     0115-producer_auth.cpp
+    0116-kafkaconsumer_close.cpp
     8000-idle.cpp
     test.c
     testcpp.cpp
