enable-static: only export pkgconfig deps when no .a is found

--- a/src-cpp/Makefile
+++ b/src-cpp/Makefile
@@ -39,6 +39,7 @@ endif
 # we'll get those dependencies through the C library linkage.
 LIBS := -L../src -lrdkafka
 MKL_PKGCONFIG_REQUIRES_PRIVATE := rdkafka
+MKL_PKGCONFIG_REQUIRES := rdkafka
 
 CHECK_FILES+= $(LIBFILENAME) $(LIBNAME).a
 
