--- a/mklove/Makefile.base
+++ b/mklove/Makefile.base
@@ -176,7 +176,7 @@ includedir=$(includedir)
 Name: $(LIBNAME)-static
 Description: $(MKL_APP_DESC_ONELINE) (static)
 Version: $(MKL_APP_VERSION)
-Requires: $(MKL_PKGCONFIG_REQUIRES_PRIVATE:rdkafka=rdkafka-static)
+Requires: $(MKL_PKGCONFIG_REQUIRES:rdkafka=rdkafka-static)
 Cflags: -I$${includedir}
 Libs: -L$${libdir} $${pc_sysrootdir}$${libdir}/$(LIBNAME)-static.a $(MKL_PKGCONFIG_LIBS_PRIVATE)
 endef
@@ -269,7 +269,7 @@ lib-uninstall:
 bin-install:
 	@printf "$(MKL_YELLOW)Install $(BIN) to $$DESTDIR$(prefix)$(MKL_CLR_RESET)\n"
 	$(INSTALL) -d $$DESTDIR$(bindir) && \
-	$(INSTALL) $(BIN) $$DESTDIR$(bindir) 
+	$(INSTALL) $(BIN) $$DESTDIR$(bindir)
 
 bin-uninstall:
 	@printf "$(MKL_YELLOW)Uninstall $(BIN) from $$DESTDIR$(prefix)$(MKL_CLR_RESET)\n"
