--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="..\..\tests\0115-producer_auth.cpp" />
     <ClCompile Include="..\..\tests\0116-kafkaconsumer_close.cpp" />
     <ClCompile Include="..\..\tests\0117-mock_errors.c" />
+    <ClCompile Include="..\..\tests\0118-commit_rebalance.c" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
