Restore previous whitespace style in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,13 @@ parseversion("src/rdkafka.h")
 
 project(RdKafka VERSION ${RDKAFKA_VERSION})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
-                      "${CMAKE_CURRENT_SOURCE_DIR}/packaging/cmake/Modules/")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/packaging/cmake/Modules/")
 
 # Options. No 'RDKAFKA_' prefix to match old C++ code. {
 
-# This option doesn't affect build in fact, only C code (see
-# 'rd_kafka_version_str').
-# In CMake the build type feature usually used (like Debug, Release, etc.).
+# This option doesn't affect build in fact, only C code
+# (see 'rd_kafka_version_str'). In CMake the build type feature usually used
+# (like Debug, Release, etc.).
 option(WITHOUT_OPTIMIZATION "Disable optimization" OFF)
 
 option(ENABLE_DEVEL "Enable development asserts, checks, etc" OFF)
@@ -162,8 +161,7 @@ option(RDKAFKA_BUILD_STATIC "Build static rdkafka library" OFF)
 option(RDKAFKA_BUILD_EXAMPLES "Build examples" ON)
 option(RDKAFKA_BUILD_TESTS "Build tests" ON)
 if(WIN32)
-  option(WITHOUT_WIN32_CONFIG "Avoid including win32_config.h on cmake builds"
-         ON)
+  option(WITHOUT_WIN32_CONFIG "Avoid including win32_config.h on cmake builds" ON)
 endif(WIN32)
 
 # In:
@@ -229,7 +227,8 @@ include(CMakePackageConfigHelpers)
 # * targets_export_name
 # * PROJECT_NAME
 configure_package_config_file(
-  "packaging/cmake/Config.cmake.in" "${project_config}"
+  "packaging/cmake/Config.cmake.in"
+  "${project_config}"
   INSTALL_DESTINATION "${config_install_dir}")
 
 write_basic_package_version_file(
@@ -237,16 +236,18 @@ write_basic_package_version_file(
   VERSION ${PROJECT_VERSION}
   COMPATIBILITY AnyNewerVersion)
 
-install(FILES "${project_config}" "${project_version}"
-              "packaging/cmake/Modules/FindLZ4.cmake"
-        DESTINATION "${config_install_dir}")
+install(
+  FILES "${project_config}" "${project_version}" "packaging/cmake/Modules/FindLZ4.cmake"
+  DESTINATION "${config_install_dir}")
 
 install(
   EXPORT "${targets_export_name}"
   NAMESPACE "${namespace}"
   DESTINATION "${config_install_dir}")
 
-install(FILES LICENSES.txt DESTINATION "share/licenses/librdkafka")
+install(
+  FILES LICENSES.txt
+  DESTINATION "share/licenses/librdkafka")
 
 # }
 
