--- a/tests/interceptor_test/CMakeLists.txt
+++ b/tests/interceptor_test/CMakeLists.txt
@@ -1,4 +1,7 @@
-set(sources interceptor_test.c)
+set(
+  sources
+  interceptor_test.c
+)
 
 add_library(interceptor_test SHARED ${sources})
 
@@ -9,5 +12,5 @@ target_link_libraries(interceptor_test PUBLIC rdkafka)
 # Remove "lib" prefix
 set_target_properties(interceptor_test PROPERTIES PREFIX "")
 set_target_properties(
-  interceptor_test PROPERTIES LIBRARY_OUTPUT_DIRECTORY
-                              ${tests_OUTPUT_DIRECTORY}/interceptor_test/)
+  interceptor_test PROPERTIES
+  LIBRARY_OUTPUT_DIRECTORY ${tests_OUTPUT_DIRECTORY}/interceptor_test/)
