--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,8 +17,7 @@ target_link_libraries(rdkafka_performance PUBLIC rdkafka)
 add_executable(rdkafka_example_cpp rdkafka_example.cpp ${win32_sources})
 target_link_libraries(rdkafka_example_cpp PUBLIC rdkafka++)
 
-add_executable(rdkafka_complex_consumer_example_cpp
-               rdkafka_complex_consumer_example.cpp ${win32_sources})
+add_executable(rdkafka_complex_consumer_example_cpp rdkafka_complex_consumer_example.cpp ${win32_sources})
 target_link_libraries(rdkafka_complex_consumer_example_cpp PUBLIC rdkafka++)
 
 # The targets below has Unix include dirs and do not compile on Windows.
@@ -26,8 +25,7 @@ if(NOT WIN32)
   add_executable(rdkafka_example rdkafka_example.c)
   target_link_libraries(rdkafka_example PUBLIC rdkafka)
 
-  add_executable(rdkafka_complex_consumer_example
-                 rdkafka_complex_consumer_example.c)
+  add_executable(rdkafka_complex_consumer_example rdkafka_complex_consumer_example.c)
   target_link_libraries(rdkafka_complex_consumer_example PUBLIC rdkafka)
 
   add_executable(kafkatest_verifiable_client kafkatest_verifiable_client.cpp)
