--- a/tests/interceptor_test/CMakeLists.txt
+++ b/tests/interceptor_test/CMakeLists.txt
@@ -13,4 +13,5 @@ target_link_libraries(interceptor_test PUBLIC rdkafka)
 set_target_properties(interceptor_test PROPERTIES PREFIX "")
 set_target_properties(
   interceptor_test PROPERTIES
-  LIBRARY_OUTPUT_DIRECTORY ${tests_OUTPUT_DIRECTORY}/interceptor_test/)
+  LIBRARY_OUTPUT_DIRECTORY ${tests_OUTPUT_DIRECTORY}/interceptor_test/
+)
